--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 				an application.
 			</li>
 			<li>
-
+				If the application is getting data from an API instead of input, then a loadAPI function
+				must be made to first fetch the data. This could work by using fetch and await. The data can then
+				be stored in an JSONtype array to be used for the future tables.
 			</li>
 		</ol>
 	</div>
