--- a/index.html
+++ b/index.html
@@ -60,6 +60,20 @@
 				must be made to first fetch the data. This could work by using fetch and await. The data can then
 				be stored in an JSONtype array to be used for the future tables.
 			</li>
+			<li>
+				By using CSS, if the user's screen is a certain pixel width, then the
+				display, width, margins, ect can be modified accordingly to keep the page
+				responsive.
+			</li>
+			<li>
+				To store the order in which the tables are displayed, localstorage could be accessed
+				to save the data so that if the user refreshes the page on their device, it will
+				continue to show the order they prefer. An outside web-based storage could also be
+				utilized instead to save this information so that the user can 'log in' and
+				see their favorites on any device. A web based service I have used in the past
+				for a similar feature would be firebase.com. Given a user id, the data can be stored on
+				this website and utilized to show their favorites in the order they prefer.
+			</li>
 		</ol>
 	</div>
 </body>
